--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="sobre">
             <h2>Sobre a Feira</h2>
             <p>A Feira do Melado é um tradicional evento da cidade de Capanema no Paraná, que celebra a cultura local e a produção de melado, um derivado da cana-de-açúcar muito apreciado na região.</p>
-            <p>Realizada anualmente, a feira reúne produtores rurais, artesãos e visitantes em uma festa que valoriza as tradições e a gastronomia local.</p>
+            <p>Realizada anualmente, a feira reúne produtores rurais, artesãos e visitantes em uma festa que valoriza as tradições e a gastronomia local, também temos varios shows e área de brinquedos, que são uma das coisas que também chamam atenção na feira.</p>
         </section>
         
         <section id="programacao">
