--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         
         <section id="localizacao">
             <h2>Localização</h2>
-            <p>A Feira do Melado acontece no centro de Capanema-PR, normalmente na Praça Central ou em local definido pela prefeitura.</p>
-            <p>Data: Geralmente no mês de julho (confirmar com os organizadores)</p>
+            <p>A Feira do Melado acontece no parque de exposições de Capanema-PR.</p>
+            <p>Data: Geralmente no mês de julho (confirmar no instagram ou facebook ou entrando no site da prefeitura)</p>
             
             <div class="mapa">
                 <!-- Você pode incorporar um mapa do Google Maps aqui -->
